# asv_description

./: CMakeLists.txt  README.md  package.xml
config/: asv_joints.yaml
launch/: display.launch  gazebo.launch  phase2_description.launch
meshes/: asv.STL  base_link.STL  base_link.dae  battery.STL  battery_1.STL  battery_2.STL  camera.STL  camera_garmin_mounts.STL  electronics.STL  garmin.STL  kill_switch_1.STL  kill_switch_2.STL  left_prop.STL  lidar.STL  middle_hull.STL  mount.STL  right_prop.STL  rs232.STL  rs_232_port.STL  sensor_pod.STL  status_board.STL  top_body.STL  top_cover.STL
scripts/: asv_base.urdf  urdf_parser.py
urdf/: asv_base.urdf  asv_base.urdf.xacro  asv_base.xacro  asv_controllers.xacro  asv_description.gv  common_properties.xacro
