<?xml version="1.0"?>
<package>
  <name>asv_description</name>
  <version>0.1.0</version>
  <description>SRM ASV Boat URDF description for simulation.</description>

  <maintainer email="akash.p1997@gmail.com">Akash Purandare</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
