<?xml version="1.0"?>
<package format="2">
  <name>asv_description</name>
  <version>0.2.0</version>
  <description>SRM ASV Boat URDF description for simulation.</description>

  <maintainer email="akash.p1997@gmail.com">Akash Purandare</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>xacro</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>

</package>
